--- a/index.html
+++ b/index.html
@@ -15,14 +15,14 @@
             justify-content: center;
             align-items: flex-start;
             min-height: 100vh;
-            overflow-x: hidden;
+            overflow-y: auto;
         }
 
         .container {
             text-align: center;
             width: 90%;
             max-width: 380px;
-            margin-top: 5%;
+            margin-top: 3%;
             position: relative;
             border-radius: 20px;
             padding: 20px;
@@ -106,13 +106,14 @@
         }
 
         .dropdown::after {
-            content: '▼';
+            content: url('https://path.to.your.arrow-icon-down.png'); /* Replace with your arrow-down icon URL */
             font-size: 16px;
             color: #333333;
             transition: transform 0.3s ease;
         }
 
         .dropdown.open::after {
+            content: url('https://path.to.your.arrow-icon-up.png'); /* Replace with your arrow-up icon URL */
             transform: rotate(180deg);
         }
 
@@ -238,16 +239,21 @@
             const countryDropdown = document.getElementById('countryCode');
             const dropdownMenu = document.getElementById('dropdownMenu');
             const countries = [
-                { name: 'Australia', code: '+61', flag: 'https://flagcdn.com/w20/au.png' },
-                { name: 'United States', code: '+1', flag: 'https://flagcdn.com/w20/us.png' },
-                { name: 'United Kingdom', code: '+44', flag: 'https://flagcdn.com/w20/gb.png' },
-                { name: 'Germany', code: '+49', flag: 'https://flagcdn.com/w20/de.png' },
-                { name: 'France', code: '+33', flag: 'https://flagcdn.com/w20/fr.png' },
-                { name: 'Japan', code: '+81', flag: 'https://flagcdn.com/w20/jp.png' },
-                { name: 'India', code: '+91', flag: 'https://flagcdn.com/w20/in.png' },
-                { name: 'China', code: '+86', flag: 'https://flagcdn.com/w20/cn.png' },
-                { name: 'Russia', code: '+7', flag: 'https://flagcdn.com/w20/ru.png' },
-                { name: 'South Korea', code: '+82', flag: 'https://flagcdn.com/w20/kr.png' }
+<p>Please confirm your country code and enter your phone number.</p>
+
+        <div class="input-group">
+            <label for="countryCode">Country</label>
+            <select id="countryCode" onchange="updatePhoneNumberPrefix()">
+                <option value="+61" data-flag="🇦🇺">🇦🇺 Australia (+61)</option>
+                <option value="+1" data-flag="🇺🇸">🇺🇸 United States (+1)</option>
+                <option value="+44" data-flag="🇬🇧">🇬🇧 United Kingdom (+44)</option>
+                <option value="+49" data-flag="🇩🇪">🇩🇪 Germany (+49)</option>
+                <option value="+33" data-flag="🇫🇷">🇫🇷 France (+33)</option>
+                <option value="+81" data-flag="🇯🇵">🇯🇵 Japan (+81)</option>
+                <option value="+91" data-flag="🇮🇳">🇮🇳 India (+91)</option>
+                <option value="+86" data-flag="🇨🇳">🇨🇳 China (+86)</option>
+                <option value="+7" data-flag="🇷🇺">🇷🇺 Russia (+7)</option>
+                <option value="+82" data-flag="🇰🇷">🇰🇷 South Korea (+82)</option>
                 // Add more countries as needed
             ];
 
