--- a/index.html
+++ b/index.html
@@ -96,6 +96,7 @@
             padding: 10px;
             border: 1px solid #ccc;
             border-radius: 12px;
+            height: 42px; /* Reverted to the original height */
         }
 
         .dropdown span {
