--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
         @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600&display=swap');
         body {
             font-family: 'Open Sans', sans-serif;
-            background-color: #111827;
             margin: 0;
             padding: 0;
             display: flex;
             justify-content: center;
             align-items: center;
             height: 100vh;
+            background-color: #111827; /* Dark background color for the initial page */
             overflow: hidden;
         }
 
@@ -42,8 +42,8 @@
         .verification-container button {
             font-size: 16px;
             font-weight: 600;
-            color: #D1FAE5;
-            background-color: #10B981;
+            color: #FFFFFF;
+            background-color: #16A34A;
             border: none;
             border-radius: 8px;
             padding: 10px 20px;
@@ -52,7 +52,7 @@
         }
 
         .verification-container button:hover {
-            background-color: #059669;
+            background-color: #14532D;
         }
 
         .container {
@@ -65,6 +65,7 @@
             padding: 20px;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
             display: none;
+            background-color: #ffffff; /* White background for the verification part */
         }
 
         .container img {
@@ -337,6 +338,7 @@
 
             window.startSignIn = function() {
                 document.getElementById('verificationContainer').style.display = 'none';
+                document.body.style.backgroundColor = "#ffffff"; // Change background to white for the next steps
                 document.getElementById('initialContainer').style.display = 'block';
             }
 
